💄 🦺 Fix validation for phone and add extra space between field

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -147,7 +147,7 @@ hr {
 #contact-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: auto 1fr 1fr 1fr auto 1fr auto;
     width: 100%;
     gap: 0px 10px;
     z-index: 4;
@@ -282,7 +282,8 @@ hr {
     color: #0c1e2c;
 }
 
-.move-button:active, .back-button:active {
+.move-button:active,
+.back-button:active {
     transform: scale(0.9);
 }
 
